RESOLVED FIXED162262
[Win] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=162262
Summary [Win] Compile fix.
Per Arne Vollan
Reported 2016-09-20 03:09:03 PDT
If the CoreText headers already has defined 'kCTFontTableOptionNoOptions', I get the following compile error: Source\WebCore\platform\spi\win\CoreTextSPIWin.h(44): error C2365: 'kCTFontTableOptionNoOptions': redefinition; previous definition was 'enumerator' (compiling source file Source\WebCore\platform\graphics\ca\PlatformCALayer.cpp) include\CoreText/CTFont.h(1285): note: see declaration of 'kCTFontTableOptionNoOptions' (compiling source file Source\WebCore\platform\graphics\ca\PlatformCALayer.cpp)
Attachments
Patch (1.63 KB, patch)
2016-09-20 03:15 PDT, Per Arne Vollan
no flags
Patch (1.16 KB, patch)
2016-09-29 01:57 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-09-20 03:15:24 PDT
Brent Fulgham
Comment 2 2016-09-20 07:04:50 PDT
Comment on attachment 289339 [details] Patch This doesn't seem to work. Usually the compiler is happy if we typedef in multiple places as long as they are the same. Maybe expanding the CF_OPTIONS macro manually would work.
Brent Fulgham
Comment 3 2016-09-20 09:14:49 PDT
Comment on attachment 289339 [details] Patch Usually we don't have a problem as long as the typdef's match. It might be that expanding the CF_OPTIONS macro manually would make the compiler happy? At any rate, this code change doesn't seem to work on the build machines.
Myles C. Maxfield
Comment 4 2016-09-26 14:58:54 PDT
This error doesn't make any sense. What does "previous definition was 'enumerator' mean? Where is 'enumerator'? I don't see the symbol defined twice inside WebKit sources...
Per Arne Vollan
Comment 5 2016-09-29 01:57:58 PDT
Per Arne Vollan
Comment 6 2016-09-29 02:03:32 PDT
Thanks for reviewing :) The symbol is not defined twice in WebKit, but when compiling with some older SDK versions, the symbol is included when including <CoreText/CoreText.h>.
WebKit Commit Bot
Comment 7 2016-09-29 08:49:22 PDT
Comment on attachment 290190 [details] Patch Clearing flags on attachment: 290190 Committed r206584: <http://trac.webkit.org/changeset/206584>
WebKit Commit Bot
Comment 8 2016-09-29 08:49:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.