[Win] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=162262

Reviewed by Anders Carlsson.

If CoreText.h is included, we will get redefinition compile errors on some older SDK
versions.

* platform/spi/win/CoreTextSPIWin.h:


Canonical link: https://commits.webkit.org/180667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206584 268f45cc-cd09-0410-ab3c-d52691b4dbfc